
2006-06-28 Bernhard Kraft  <kraftb@kraftb.at>

	* Fix bug #3162: Cropscale fails, if one dimesion has already the right size (thanks to Stefan Geith)

2006-06-28 Karsten Dambekalns <karsten@typo3.org>

	* t3lib_extfilefunc: func_upload() now logs if no file was uploaded. The last error message encountered is stored in the member variable $lastError
	* t3lib_tcemain: Made SQL query in versionizeRecord() conform to DBAL (use OR instead of ||).
	* t3lib_userauthgroup, tx_sv_auth: Made FE group lookups possible when lockToDomain is NULL in DB (e.g. when using Oracle).
	* t3lib/stddb/tables.sql: Changed be_users.lang to VARCHAR instead of CHAR, as MySQL changes it anyway.

2006-06-27 Karsten Dambekalns <karsten@typo3.org>

        * typo3/init.php: Fixed bug #2871.
	* t3lib/class.t3lib_befunc.php: Fixed bug #3106, Documentation of function storeHash differs between class befunc and class page
	* class.em_xmlhandler.php: Small change to the inline code docs
	* class.tx_install.php: Code cleanup, removed some commented code and cleaned indentation

2006-06-22  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Created exclusiveKeys for the TCA field configuration of type "select" [fix from 2006-03-19 was lost, see below]

2006-06-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue 3505: BE multi-language flexforms do not work (t3lib_tceforms)

2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Template tools (Web>Template) had hard-coded background colours
	* Made Web > Template > Info skinnable

2006-06-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Make t3lib_div::arrayToLogString() accept an empty string as empty list
	* Fix bug #2938: edit icons have two title attributes, one hardcoded as an empty string

2006-06-04  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Unify PHP5 check in config_defaults.php and deprecate $TYPO_VERSION

2006-06-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>
